# STRIKEMEPLEASE

./: Cargo.toml  README.md  goal
src/: main.rs
