[package]
name = "first"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0.50"
anyhow = "1.0.75"
axum = "0.8.7"
tower-http = {version = "0.6.8", features = ["fs","cors"]}
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
